lalr_full/y.output

state 0
	$accept: .top $end 
	top: .    (1)

	.  reduce 1 (src line 416)

	top  goto 1

state 1
	$accept:  top.$end 
	top:  top.TOK_USING SYMBOLx 
	top:  top.TOK_INCLUDE SYMBOLx 
	top:  top.optexplicit opttemporal TOK_AXIOM lgprop 
	top:  top.optexplicit opttemporal TOK_PROPERTY labeledfmla optskolem optproof 
	top:  top.TOK_CONJECTURE labeledfmla 
	top:  top.optexplicit TOK_INVARIANT labeledfmla optproof 
	top:  top.TOK_UNPROVABLE TOK_INVARIANT labeledfmla optproof 
	top:  top.TOK_MODULE modulestart modcat atom optwith TOK_EQ TOK_LCB top TOK_RCB moduleend 
	top:  top.TOK_OBJECT objsym objectargs TOK_EQ TOK_LCB optdotdotdot top TOK_RCB objectend 
	top:  top.TOK_CLASS objsym objectargs TOK_EQ TOK_LCB optdotdotdot top TOK_RCB objectend 
	top:  top.TOK_SUBCLASS objsym TOK_OF atype TOK_EQ TOK_LCB optdotdotdot top TOK_RCB objectend 
	top:  top.optexplicit TOK_DEFINITION optlabel gdefn optproof 
	top:  top.TOK_SCHEMA schdefn 
	top:  top.TOK_THEOREM schdefn optproof 
	top:  top.TOK_THEOREM labelname schdefnrhs optproof 
	top:  top.TOK_PROOF labelname proofstep 
	top:  top.TOK_INSTANTIATE insts 
	top:  top.TOK_AUTOINSTANCE insts 
	top:  top.symdecl 
	top:  top.TOK_RELATION rels 
	top:  top.TOK_FUNCTION funs 
	top:  top.TOK_DERIVED defns 
	top:  top.optfinite optghost TOK_TYPE typesymbol 
	top:  top.optfinite optghost TOK_TYPE typesymbol TOK_EQ sort 
	top:  top.TOK_PROGRESS defns 
	top:  top.TOK_RELY atom TOK_ARROW atom 
	top:  top.TOK_RELY atom 
	top:  top.TOK_MIXORD callatom TOK_ARROW callatom 
	top:  top.TOK_CONCEPT cdefns 
	top:  top.TOK_UPDATE apps TOK_FROM apps upaxes 
	top:  top.TOK_MACRO atom TOK_EQ sequence 
	top:  top.optimpex actmeth SYMBOLx optargs optreturns optactiondef 
	top:  top.TOK_MIXIN callatom TOK_BEFORE callatom 
	top:  top.TOK_MIXIN callatom TOK_AFTER callatom 
	top:  top.TOK_BEFORE atype optargs optreturns sequence 
	top:  top.TOK_AFTER atype optargs optreturns topseq 
	top:  top.TOK_AROUND atype optargs optreturns TOK_LCB actseq optsemi TOK_DOTDOTDOT actseq optsemi TOK_RCB 
	top:  top.TOK_AFTER TOK_INIT optargs topseq 
	top:  top.TOK_IMPLEMENT atype optargs optreturns topseq 
	top:  top.TOK_IMPLEMENT TOK_TYPE SYMBOLx TOK_WITH SYMBOLx 
	top:  top.opttrusted TOK_ISOLATE SYMBOLx optargs TOK_EQ callatoms 
	top:  top.opttrusted TOK_ISOLATE SYMBOLx optargs TOK_EQ callatoms TOK_WITH callatoms 
	top:  top.opttrusted TOK_ISOLATE SYMBOLx optargs TOK_EQ TOK_LCB top TOK_RCB optwith 
	top:  top.TOK_EXTRACT objsym objectargs TOK_EQ TOK_LCB top TOK_RCB optwith 
	top:  top.TOK_EXTRACT objsym objectargs TOK_EQ callatoms 
	top:  top.TOK_EXPORT callatom 
	top:  top.TOK_IMPORT callatom 
	top:  top.TOK_DELEGATE callatoms optdelegee 
	top:  top.TOK_INTERPRET oper TOK_ARROW oper 
	top:  top.TOK_INTERPRET oper TOK_ARROW TOK_LCB term TOK_DOTS term TOK_RCB 
	top:  top.TOK_INTERPRET oper TOK_ARROW TOK_LCB SYMBOLx moresymbols TOK_RCB 
	top:  top.TOK_ALIAS SYMBOLx TOK_EQ callatom 
	top:  top.TOK_ATTRIBUTE callatom TOK_EQ attributeval 
	top:  top.TOK_VARIANT typesymbol TOK_OF atype 
	top:  top.TOK_VARIANT typesymbol TOK_OF atype TOK_EQ sort 
	top:  top.TOK_NATIVEQUOTE 
	top:  top.TOK_SCENARIO TOK_LCB sceninit TOK_SEMI scentranss TOK_RCB 
	top:  top.specimpl TOK_LCB top TOK_RCB 
	top:  top.TOK_STATE SYMBOLx TOK_EQ state_expr 
	top:  top.TOK_ASSERT SYMBOLx TOK_ARROW assert_rhs 
	optexplicit: .    (133)
	optfinite: .    (226)
	optimpex: .    (298)
	opttrusted: .    (276)

	$end  accept
	TOK_NATIVEQUOTE  shift 42
	TOK_ASSERT  shift 46
	TOK_VAR  shift 60
	TOK_UNPROVABLE  shift 6
	TOK_PROOF  shift 13
	TOK_INSTANTIATE  shift 14
	TOK_RELATION  shift 17
	TOK_INDIV  shift 59
	TOK_FUNCTION  shift 18
	TOK_DERIVED  shift 19
	TOK_CONJECTURE  shift 5
	TOK_SCHEMA  shift 11
	TOK_THEOREM  shift 12
	TOK_TYPE  reduce 226 (src line 2366)
	TOK_MODULE  shift 7
	TOK_OBJECT  shift 8
	TOK_CLASS  shift 9
	TOK_SUBCLASS  shift 10
	TOK_ACTION  reduce 298 (src line 2826)
	TOK_METHOD  reduce 298 (src line 2826)
	TOK_BEFORE  shift 29
	TOK_AFTER  shift 30
	TOK_AROUND  shift 31
	TOK_MIXIN  shift 28
	TOK_IMPLEMENT  shift 32
	TOK_ISOLATE  reduce 276 (src line 2667)
	TOK_EXTRACT  shift 34
	TOK_TRUSTED  shift 53
	TOK_EXPORT  shift 35
	TOK_IMPORT  shift 36
	TOK_DELEGATE  shift 37
	TOK_USING  shift 2
	TOK_INCLUDE  shift 3
	TOK_INTERPRET  shift 38
	TOK_MACRO  shift 26
	TOK_ALIAS  shift 39
	TOK_ATTRIBUTE  shift 40
	TOK_VARIANT  shift 41
	TOK_SCENARIO  shift 43
	TOK_PROGRESS  shift 21
	TOK_RELY  shift 22
	TOK_MIXORD  shift 23
	TOK_CONCEPT  shift 24
	TOK_STATE  shift 45
	TOK_UPDATE  shift 25
	TOK_EXPLICIT  shift 47
	TOK_SPECIFICATION  shift 54
	TOK_IMPLEMENTATION  shift 55
	TOK_PRIVATE  shift 56
	TOK_GLOBAL  shift 57
	TOK_COMMON  shift 58
	TOK_GHOST  reduce 226 (src line 2366)
	TOK_FINITE  shift 52
	TOK_PARAMETER  shift 61
	TOK_DESTRUCTOR  shift 49
	TOK_CONSTRUCTOR  shift 51
	TOK_FIELD  shift 50
	TOK_AUTOINSTANCE  shift 15
	.  reduce 133 (src line 1710)

	optexplicit  goto 4
	symdecl  goto 16
	constantdecl  goto 48
	optfinite  goto 20
	optimpex  goto 27
	opttrusted  goto 33
	specimpl  goto 44

state 2
	top:  top TOK_USING.SYMBOLx 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 62

state 3
	top:  top TOK_INCLUDE.SYMBOLx 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 64

state 4
	top:  top optexplicit.opttemporal TOK_AXIOM lgprop 
	top:  top optexplicit.opttemporal TOK_PROPERTY labeledfmla optskolem optproof 
	top:  top optexplicit.TOK_INVARIANT labeledfmla optproof 
	top:  top optexplicit.TOK_DEFINITION optlabel gdefn optproof 
	opttemporal: .    (129)

	TOK_INVARIANT  shift 66
	TOK_DEFINITION  shift 67
	TOK_TEMPORAL  shift 68
	.  reduce 129 (src line 1684)

	opttemporal  goto 65

state 5
	top:  top TOK_CONJECTURE.labeledfmla 

	TOK_PRESYMBOL  shift 63
	TOK_VARIABLE  shift 88
	TOK_LABEL  shift 74
	TOK_LPAREN  shift 78
	TOK_LB  shift 73
	TOK_TILDA  shift 81
	TOK_DOLLAR  shift 86
	TOK_FORALL  shift 82
	TOK_EXISTS  shift 83
	TOK_TRUE  shift 79
	TOK_FALSE  shift 80
	TOK_OLD  shift 77
	TOK_GLOBALLY  shift 84
	TOK_EVENTUALLY  shift 85
	.  error

	term  goto 72
	fmla  goto 70
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87
	labelname  goto 71
	labeledfmla  goto 69

state 6
	top:  top TOK_UNPROVABLE.TOK_INVARIANT labeledfmla optproof 

	TOK_INVARIANT  shift 89
	.  error


state 7
	top:  top TOK_MODULE.modulestart modcat atom optwith TOK_EQ TOK_LCB top TOK_RCB moduleend 
	modulestart: .    (264)

	.  reduce 264 (src line 2583)

	modulestart  goto 90

state 8
	top:  top TOK_OBJECT.objsym objectargs TOK_EQ TOK_LCB optdotdotdot top TOK_RCB objectend 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 92
	objsym  goto 91

state 9
	top:  top TOK_CLASS.objsym objectargs TOK_EQ TOK_LCB optdotdotdot top TOK_RCB objectend 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 92
	objsym  goto 93

state 10
	top:  top TOK_SUBCLASS.objsym TOK_OF atype TOK_EQ TOK_LCB optdotdotdot top TOK_RCB objectend 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 92
	objsym  goto 94

state 11
	top:  top TOK_SCHEMA.schdefn 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defnlhs  goto 96
	schdefn  goto 95
	dotsym  goto 97

state 12
	top:  top TOK_THEOREM.schdefn optproof 
	top:  top TOK_THEOREM.labelname schdefnrhs optproof 

	TOK_PRESYMBOL  shift 63
	TOK_LABEL  shift 74
	TOK_LPAREN  shift 98
	TOK_LB  shift 73
	.  error

	SYMBOLx  goto 99
	labelname  goto 101
	defnlhs  goto 96
	schdefn  goto 100
	dotsym  goto 97

state 13
	top:  top TOK_PROOF.labelname proofstep 

	TOK_LABEL  shift 74
	TOK_LB  shift 73
	.  error

	labelname  goto 102

state 14
	top:  top TOK_INSTANTIATE.insts 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 99
	dotsym  goto 106
	inst  goto 104
	modinst  goto 105
	insts  goto 103

state 15
	top:  top TOK_AUTOINSTANCE.insts 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 99
	dotsym  goto 106
	inst  goto 104
	modinst  goto 105
	insts  goto 107

state 16
	top:  top symdecl.    (20)

	.  reduce 20 (src line 669)


state 17
	top:  top TOK_RELATION.rels 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defn  goto 111
	defnlhs  goto 110
	typeddefn  goto 112
	rel  goto 109
	rels  goto 108
	dotsym  goto 97

state 18
	top:  top TOK_FUNCTION.funs 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defnlhs  goto 116
	typeddefn  goto 115
	fun  goto 114
	funs  goto 113
	dotsym  goto 97

state 19
	top:  top TOK_DERIVED.defns 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defn  goto 118
	defnlhs  goto 116
	typeddefn  goto 112
	defns  goto 117
	dotsym  goto 97

state 20
	top:  top optfinite.optghost TOK_TYPE typesymbol 
	top:  top optfinite.optghost TOK_TYPE typesymbol TOK_EQ sort 
	optghost: .    (228)

	TOK_GHOST  shift 120
	.  reduce 228 (src line 2379)

	optghost  goto 119

state 21
	top:  top TOK_PROGRESS.defns 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defn  goto 118
	defnlhs  goto 116
	typeddefn  goto 112
	defns  goto 121
	dotsym  goto 97

state 22
	top:  top TOK_RELY.atom TOK_ARROW atom 
	top:  top TOK_RELY.atom 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 123
	atom  goto 122

state 23
	top:  top TOK_MIXORD.callatom TOK_ARROW callatom 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 126
	TOK_METHOD  shift 127
	.  error

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 124

state 24
	top:  top TOK_CONCEPT.cdefns 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 123
	atom  goto 130
	cdefn  goto 129
	cdefns  goto 128

state 25
	top:  top TOK_UPDATE.apps TOK_FROM apps upaxes 

	TOK_PRESYMBOL  shift 63
	TOK_VARIABLE  shift 88
	TOK_LPAREN  shift 78
	TOK_TILDA  shift 81
	TOK_DOLLAR  shift 86
	TOK_FORALL  shift 82
	TOK_EXISTS  shift 83
	TOK_TRUE  shift 79
	TOK_FALSE  shift 80
	TOK_OLD  shift 77
	TOK_GLOBALLY  shift 84
	TOK_EVENTUALLY  shift 85
	.  error

	term  goto 134
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 133
	app  goto 132
	apps  goto 131

state 26
	top:  top TOK_MACRO.atom TOK_EQ sequence 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 123
	atom  goto 135

state 27
	top:  top optimpex.actmeth SYMBOLx optargs optreturns optactiondef 

	TOK_ACTION  shift 137
	TOK_METHOD  shift 138
	.  error

	actmeth  goto 136

state 28
	top:  top TOK_MIXIN.callatom TOK_BEFORE callatom 
	top:  top TOK_MIXIN.callatom TOK_AFTER callatom 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 126
	TOK_METHOD  shift 127
	.  error

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 139

state 29
	top:  top TOK_BEFORE.atype optargs optreturns sequence 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 142
	.  error

	atype  goto 140
	SYMBOLx  goto 141

state 30
	top:  top TOK_AFTER.atype optargs optreturns topseq 
	top:  top TOK_AFTER.TOK_INIT optargs topseq 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 142
	TOK_INIT  shift 144
	.  error

	atype  goto 143
	SYMBOLx  goto 141

state 31
	top:  top TOK_AROUND.atype optargs optreturns TOK_LCB actseq optsemi TOK_DOTDOTDOT actseq optsemi TOK_RCB 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 142
	.  error

	atype  goto 145
	SYMBOLx  goto 141

state 32
	top:  top TOK_IMPLEMENT.atype optargs optreturns topseq 
	top:  top TOK_IMPLEMENT.TOK_TYPE SYMBOLx TOK_WITH SYMBOLx 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 142
	TOK_TYPE  shift 147
	.  error

	atype  goto 146
	SYMBOLx  goto 141

state 33
	top:  top opttrusted.TOK_ISOLATE SYMBOLx optargs TOK_EQ callatoms 
	top:  top opttrusted.TOK_ISOLATE SYMBOLx optargs TOK_EQ callatoms TOK_WITH callatoms 
	top:  top opttrusted.TOK_ISOLATE SYMBOLx optargs TOK_EQ TOK_LCB top TOK_RCB optwith 

	TOK_ISOLATE  shift 148
	.  error


state 34
	top:  top TOK_EXTRACT.objsym objectargs TOK_EQ TOK_LCB top TOK_RCB optwith 
	top:  top TOK_EXTRACT.objsym objectargs TOK_EQ callatoms 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 92
	objsym  goto 149

35: shift/reduce conflict (shift 127(0), red'n 299(0)) on TOK_METHOD
state 35
	top:  top TOK_EXPORT.callatom 
	optimpex:  TOK_EXPORT.    (299)

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 126
	TOK_METHOD  shift 127
	.  reduce 299 (src line 2832)

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 150

36: shift/reduce conflict (shift 127(0), red'n 300(0)) on TOK_METHOD
state 36
	top:  top TOK_IMPORT.callatom 
	optimpex:  TOK_IMPORT.    (300)

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 126
	TOK_METHOD  shift 127
	.  reduce 300 (src line 2837)

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 151

state 37
	top:  top TOK_DELEGATE.callatoms optdelegee 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 126
	TOK_METHOD  shift 127
	.  error

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 153
	callatoms  goto 152

state 38
	top:  top TOK_INTERPRET.oper TOK_ARROW oper 
	top:  top TOK_INTERPRET.oper TOK_ARROW TOK_LCB term TOK_DOTS term TOK_RCB 
	top:  top TOK_INTERPRET.oper TOK_ARROW TOK_LCB SYMBOLx moresymbols TOK_RCB 

	TOK_PRESYMBOL  shift 63
	TOK_NATIVEQUOTE  shift 158
	TOK_PLUS  shift 165
	TOK_MINUS  shift 166
	TOK_TIMES  shift 167
	TOK_DIV  shift 168
	TOK_EQ  shift 159
	TOK_LE  shift 160
	TOK_LT  shift 161
	TOK_GE  shift 162
	TOK_GT  shift 163
	TOK_PTO  shift 164
	TOK_THIS  shift 142
	.  error

	atype  goto 155
	SYMBOLx  goto 141
	oper  goto 154
	relop  goto 156
	infix  goto 157

state 39
	top:  top TOK_ALIAS.SYMBOLx TOK_EQ callatom 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 169

state 40
	top:  top TOK_ATTRIBUTE.callatom TOK_EQ attributeval 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 126
	TOK_METHOD  shift 127
	.  error

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 170

state 41
	top:  top TOK_VARIANT.typesymbol TOK_OF atype 
	top:  top TOK_VARIANT.typesymbol TOK_OF atype TOK_EQ sort 

	TOK_PRESYMBOL  shift 63
	TOK_THIS  shift 173
	.  error

	SYMBOLx  goto 172
	typesymbol  goto 171

state 42
	top:  top TOK_NATIVEQUOTE.    (57)

	.  reduce 57 (src line 1101)


state 43
	top:  top TOK_SCENARIO.TOK_LCB sceninit TOK_SEMI scentranss TOK_RCB 

	TOK_LCB  shift 174
	.  error


state 44
	top:  top specimpl.TOK_LCB top TOK_RCB 

	TOK_LCB  shift 175
	.  error


state 45
	top:  top TOK_STATE.SYMBOLx TOK_EQ state_expr 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 176

state 46
	top:  top TOK_ASSERT.SYMBOLx TOK_ARROW assert_rhs 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 177

state 47
	optexplicit:  TOK_EXPLICIT.    (134)

	.  reduce 134 (src line 1716)


state 48
	symdecl:  constantdecl.    (186)

	.  reduce 186 (src line 2088)


state 49
	symdecl:  TOK_DESTRUCTOR.tterms 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 183
	TOK_CARET  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 178

state 50
	symdecl:  TOK_FIELD.tterms 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 183
	TOK_CARET  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 184

state 51
	symdecl:  TOK_CONSTRUCTOR.tterms 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 183
	TOK_CARET  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 185

state 52
	optfinite:  TOK_FINITE.    (227)

	.  reduce 227 (src line 2372)


state 53
	opttrusted:  TOK_TRUSTED.    (277)

	.  reduce 277 (src line 2673)


state 54
	specimpl:  TOK_SPECIFICATION.    (303)

	.  reduce 303 (src line 2861)


state 55
	specimpl:  TOK_IMPLEMENTATION.    (304)

	.  reduce 304 (src line 2867)


state 56
	specimpl:  TOK_PRIVATE.    (305)

	.  reduce 305 (src line 2872)


state 57
	specimpl:  TOK_GLOBAL.    (306)

	.  reduce 306 (src line 2877)


state 58
	specimpl:  TOK_COMMON.    (307)

	.  reduce 307 (src line 2882)


state 59
	constantdecl:  TOK_INDIV.tterms 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 183
	TOK_CARET  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 186

state 60
	constantdecl:  TOK_VAR.tterms 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 183
	TOK_CARET  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 187

state 61
	constantdecl:  TOK_PARAMETER.parameter 

	TOK_PRESYMBOL  shift 63
	TOK_LPAREN  shift 183
	TOK_CARET  shift 182
	.  error

	SYMBOLx  goto 181
	parameter  goto 188
	tapp  goto 180
	tterm  goto 189

state 62
	top:  top TOK_USING SYMBOLx.    (2)

	.  reduce 2 (src line 425)


state 63
	SYMBOLx:  TOK_PRESYMBOL.    (62)

	.  reduce 62 (src line 1147)


state 64
	top:  top TOK_INCLUDE SYMBOLx.    (3)

	.  reduce 3 (src line 431)


state 65
	top:  top optexplicit opttemporal.TOK_AXIOM lgprop 
	top:  top optexplicit opttemporal.TOK_PROPERTY labeledfmla optskolem optproof 

	TOK_AXIOM  shift 190
	TOK_PROPERTY  shift 191
	.  error


state 66
	top:  top optexplicit TOK_INVARIANT.labeledfmla optproof 

	TOK_PRESYMBOL  shift 63
	TOK_VARIABLE  shift 88
	TOK_LABEL  shift 74
	TOK_LPAREN  shift 78
	TOK_LB  shift 73
	TOK_TILDA  shift 81
	TOK_DOLLAR  shift 86
	TOK_FORALL  shift 82
	TOK_EXISTS  shift 83
	TOK_TRUE  shift 79
	TOK_FALSE  shift 80
	TOK_OLD  shift 77
	TOK_GLOBALLY  shift 84
	TOK_EVENTUALLY  shift 85
	.  error

	term  goto 72
	fmla  goto 70
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87
	labelname  goto 71
	labeledfmla  goto 192

state 67
	top:  top optexplicit TOK_DEFINITION.optlabel gdefn optproof 
	optlabel: .    (135)

	TOK_LABEL  shift 74
	TOK_LB  shift 73
	.  reduce 135 (src line 1723)

	labelname  goto 194
	optlabel  goto 193

state 68
	opttemporal:  TOK_TEMPORAL.    (130)

	.  reduce 130 (src line 1690)


state 69
	top:  top TOK_CONJECTURE labeledfmla.    (6)

	.  reduce 6 (src line 502)


state 70
	labeledfmla:  fmla.    (122)

	.  reduce 122 (src line 1623)


state 71
	labeledfmla:  labelname.fmla 

	TOK_PRESYMBOL  shift 63
	TOK_VARIABLE  shift 88
	TOK_LPAREN  shift 78
	TOK_TILDA  shift 81
	TOK_DOLLAR  shift 86
	TOK_FORALL  shift 82
	TOK_EXISTS  shift 83
	TOK_TRUE  shift 79
	TOK_FALSE  shift 80
	TOK_OLD  shift 77
	TOK_GLOBALLY  shift 84
	TOK_EVENTUALLY  shift 85
	.  error

	term  goto 72
	fmla  goto 195
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87

72: shift/reduce conflict (shift 218(11), red'n 121(0)) on TOK_COLON
72: shift/reduce conflict (shift 196(16), red'n 121(0)) on TOK_DOT
72: shift/reduce conflict (shift 197(12), red'n 121(0)) on TOK_PLUS
72: shift/reduce conflict (shift 198(12), red'n 121(0)) on TOK_MINUS
72: shift/reduce conflict (shift 199(13), red'n 121(0)) on TOK_TIMES
72: shift/reduce conflict (shift 200(13), red'n 121(0)) on TOK_DIV
72: shift/reduce conflict (shift 202(7), red'n 121(0)) on TOK_EQ
72: shift/reduce conflict (shift 208(8), red'n 121(0)) on TOK_TILDAEQ
72: shift/reduce conflict (shift 203(7), red'n 121(0)) on TOK_LE
72: shift/reduce conflict (shift 204(7), red'n 121(0)) on TOK_LT
72: shift/reduce conflict (shift 205(7), red'n 121(0)) on TOK_GE
72: shift/reduce conflict (shift 206(7), red'n 121(0)) on TOK_GT
72: shift/reduce conflict (shift 209(5), red'n 121(0)) on TOK_AND
72: shift/reduce conflict (shift 210(4), red'n 121(0)) on TOK_OR
72: shift/reduce conflict (shift 211(3), red'n 121(0)) on TOK_ARROW
72: shift/reduce conflict (shift 212(3), red'n 121(0)) on TOK_IFF
72: shift/reduce conflict (shift 207(7), red'n 121(0)) on TOK_PTO
72: shift/reduce conflict (shift 217(7), red'n 121(0)) on TOK_ISA
72: shift/reduce conflict (shift 201(9), red'n 121(0)) on TOK_IF
72: shift/reduce conflict (shift 213(0), red'n 121(0)) on TOK_WHENNEXT
72: shift/reduce conflict (shift 214(0), red'n 121(0)) on TOK_WHENPREV
72: shift/reduce conflict (shift 215(0), red'n 121(0)) on TOK_WHENFIRST
72: shift/reduce conflict (shift 216(0), red'n 121(0)) on TOK_WHENLAST
state 72
	term:  term.TOK_DOT appelem 
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	term:  term.TOK_EQ term 
	term:  term.TOK_LE term 
	term:  term.TOK_LT term 
	term:  term.TOK_GE term 
	term:  term.TOK_GT term 
	term:  term.TOK_PTO term 
	term:  term.TOK_TILDAEQ term 
	term:  term.TOK_AND term 
	term:  term.TOK_OR term 
	term:  term.TOK_ARROW term 
	term:  term.TOK_IFF term 
	term:  term.TOK_WHENNEXT term 
	term:  term.TOK_WHENPREV term 
	term:  term.TOK_WHENFIRST term 
	term:  term.TOK_WHENLAST term 
	term:  term.TOK_ISA atype 
	term:  term.TOK_COLON atype 
	fmla:  term.    (121)

	TOK_COLON  shift 218
	TOK_DOT  shift 196
	TOK_PLUS  shift 197
	TOK_MINUS  shift 198
	TOK_TIMES  shift 199
	TOK_DIV  shift 200
	TOK_EQ  shift 202
	TOK_TILDAEQ  shift 208
	TOK_LE  shift 203
	TOK_LT  shift 204
	TOK_GE  shift 205
	TOK_GT  shift 206
	TOK_AND  shift 209
	TOK_OR  shift 210
	TOK_ARROW  shift 211
	TOK_IFF  shift 212
	TOK_PTO  shift 207
	TOK_ISA  shift 217
	TOK_IF  shift 201
	TOK_WHENNEXT  shift 213
	TOK_WHENPREV  shift 214
	TOK_WHENFIRST  shift 215
	TOK_WHENLAST  shift 216
	.  reduce 121 (src line 1611)


state 73
	labelname:  TOK_LB.SYMBOLx TOK_RB 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 219

state 74
	labelname:  TOK_LABEL.    (125)

	.  reduce 125 (src line 1647)


state 75
	term:  appelem.    (82)

	.  reduce 82 (src line 1316)


state 76
	term:  var.    (83)

	.  reduce 83 (src line 1322)


state 77
	term:  TOK_OLD.appelem 

	TOK_PRESYMBOL  shift 63
	.  error

	appelem  goto 220
	SYMBOLx  goto 87

state 78
	term:  TOK_LPAREN.term TOK_RPAREN 
	term:  TOK_LPAREN.TOK_DOLLAR SYMBOLx simplevars TOK_DOT fmla TOK_RPAREN TOK_LPAREN terms TOK_RPAREN 

	TOK_PRESYMBOL  shift 63
	TOK_VARIABLE  shift 88
	TOK_LPAREN  shift 78
	TOK_TILDA  shift 81
	TOK_DOLLAR  shift 222
	TOK_FORALL  shift 82
	TOK_EXISTS  shift 83
	TOK_TRUE  shift 79
	TOK_FALSE  shift 80
	TOK_OLD  shift 77
	TOK_GLOBALLY  shift 84
	TOK_EVENTUALLY  shift 85
	.  error

	term  goto 221
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87

state 79
	term:  TOK_TRUE.    (99)

	.  reduce 99 (src line 1452)


state 80
	term:  TOK_FALSE.    (100)

	.  reduce 100 (src line 1459)


state 81
	term:  TOK_TILDA.term 

	TOK_PRESYMBOL  shift 63
	TOK_VARIABLE  shift 88
	TOK_LPAREN  shift 78
	TOK_TILDA  shift 81
	TOK_DOLLAR  shift 86
	TOK_FORALL  shift 82
	TOK_EXISTS  shift 83
	TOK_TRUE  shift 79
	TOK_FALSE  shift 80
	TOK_OLD  shift 77
	TOK_GLOBALLY  shift 84
	TOK_EVENTUALLY  shift 85
	.  error

	term  goto 223
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87

state 82
	term:  TOK_FORALL.simplevars TOK_DOT term 
	term:  TOK_FORALL.TOK_LPAREN vars TOK_RPAREN term 

	TOK_VARIABLE  shift 227
	TOK_LPAREN  shift 225
	.  error

	simplevar  goto 226
	simplevars  goto 224

state 83
	term:  TOK_EXISTS.simplevars TOK_DOT term 
	term:  TOK_EXISTS.TOK_LPAREN vars TOK_RPAREN term 

	TOK_VARIABLE  shift 227
	TOK_LPAREN  shift 229
	.  error

	simplevar  goto 226
	simplevars  goto 228

state 84
	term:  TOK_GLOBALLY.term 

	TOK_PRESYMBOL  shift 63
	TOK_VARIABLE  shift 88
	TOK_LPAREN  shift 78
	TOK_TILDA  shift 81
	TOK_DOLLAR  shift 86
	TOK_FORALL  shift 82
	TOK_EXISTS  shift 83
	TOK_TRUE  shift 79
	TOK_FALSE  shift 80
	TOK_OLD  shift 77
	TOK_GLOBALLY  shift 84
	TOK_EVENTUALLY  shift 85
	.  error

	term  goto 230
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87

state 85
	term:  TOK_EVENTUALLY.term 

	TOK_PRESYMBOL  shift 63
	TOK_VARIABLE  shift 88
	TOK_LPAREN  shift 78
	TOK_TILDA  shift 81
	TOK_DOLLAR  shift 86
	TOK_FORALL  shift 82
	TOK_EXISTS  shift 83
	TOK_TRUE  shift 79
	TOK_FALSE  shift 80
	TOK_OLD  shift 77
	TOK_GLOBALLY  shift 84
	TOK_EVENTUALLY  shift 85
	.  error

	term  goto 231
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87

state 86
	term:  TOK_DOLLAR.SYMBOLx TOK_DOT fmla 
	term:  TOK_DOLLAR.SYMBOLx TOK_DOLLAR fmla 

	TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 232
